force-app/main/default/objects/Entrevista__c/Entrevista__c.object-meta.xml
<CustomObject>
    <label>Entrevista</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Entrevista Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entrevistas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>