force-app/main/default/objects/Entrevista__c/fields/Aspirante__c.field-meta.xml
<CustomField>
    <fullName>Aspirante__c</fullName>
    <label>Aspirante</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Entrevistas</relationshipLabel>
    <relationshipName>Entrevistas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>