force-app/main/default/objects/Entrevista__c/fields/Entrevistador__c.field-meta.xml
<CustomField>
    <fullName>Entrevistador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrevistador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jefe de Proyecto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entrevistas (Entrevistador)</relationshipLabel>
    <relationshipName>Entrevistas1</relationshipName>
    <type>Lookup</type>
</CustomField>