force-app/main/default/objects/Entrevista__c/fields/Fecha_entrevista__c.field-meta.xml
<CustomField>
    <fullName>Fecha_entrevista__c</fullName>
    <label>Fecha entrevista</label>
    <type>DateTime</type>
</CustomField>