force-app/main/default/objects/Entrevista__c/fields/Modo_entrevista__c.field-meta.xml
<CustomField>
    <fullName>Modo_entrevista__c</fullName>
    <label>Modo de entrevista</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefónica Skype</fullName>
            </value>
            <value>
                <fullName>Telefónica</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>