force-app/main/default/objects/Entrevista__c/fields/Referencia_entrevista__c.field-meta.xml
<CustomField>
    <fullName>Referencia_entrevista__c</fullName>
    <displayFormat>N-{00000}</displayFormat>
    <label>Referencia entrevista</label>
    <type>AutoNumber</type>
</CustomField>