force-app/main/default/objects/Entrevista__c/fields/Resumen_entrevista__c.field-meta.xml
<CustomField>
    <fullName>Resumen_entrevista__c</fullName>
    <label>Resumen entrevista</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>