force-app/main/default/objects/Entrevista__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aspirante__c</columns>
    <columns>Entrevistador__c</columns>
    <columns>Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>